# libswupdate-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
examples/: progress.rs
libswupdate-sys/: Cargo.toml  README.md  build.rs  wrapper.h
libswupdate-sys/src/: bindings.rs  lib.rs
src/: lib.rs  network.rs  progress.rs  status.rs
